@@ -26,3 +26,4 @@ INCLUDES =  -I$(top_srcdir) @CAIROMM_CFLAGS@
 LIBS = $(top_builddir)/cairomm/libcairomm-1.0.la @LIBS@ @CAIROMM_LIBS@ @BOOST_UNIT_TEST_FRAMEWORK_STATIC_LIB@
 
 EXTRA_DIST=png-stream-test.png
+DISTCLEANFILES=test.ps test.pdf
