@@ -1,5 +1,12 @@
 2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>
 
+	* configure.in:
+	* data/Makefile.am:
+	* tests/Makefile.am: fix some distcheck failures (pkg-config files and
+	unit-test-generated images were not removed on distclean)
+
+2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>
+
 	* NEWS: explicitly mention that 1.7.0 is an unstable release
 
 2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>
